fixed social list style and  disabled scroll on mobileNav menu state

--- a/src/portfolio/components/molecules/Header/Header.module.scss
+++ b/src/portfolio/components/molecules/Header/Header.module.scss
@@ -15,6 +15,7 @@ $number-of-nav-li-elements: 3;
   flex-grow: 1;
   align-items: center;
   justify-content: flex-end;
+  position: relative;
   height: constants.$header-height;
   padding: functions.spacing(4) functions.spacing(13) functions.spacing(4) functions.spacing(1);
   z-index: 1;
@@ -102,6 +103,7 @@ $number-of-nav-li-elements: 3;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    z-index: 9;
 
     & ol {
       text-align: center;
