--- a/src/portfolio/components/organisms/PortfolioPage/PortfolioPage.module.scss
+++ b/src/portfolio/components/organisms/PortfolioPage/PortfolioPage.module.scss
@@ -5,5 +5,4 @@
   width: 100%;
   margin-right: 0;
   margin-left: 0;
-  position: relative;
 }
